# edgeboard-2025

./: .gitignore  CMakeLists.txt
config/: config.json  config_ppncnms.json  config_ppncnna.json  roadwidth.txt
deprecated/: 666cater.hpp  bridge.hpp  comment.cpp  danger.cpp  mapping.hpp  parking.hpp  saishuObstacle.hpp  zzz.hpp
include/: capture.hpp  common.hpp  controlcenter.hpp  detection.hpp  motion.hpp  preprocess.hpp  uart.hpp
include/detection/: bridge.hpp  catering.hpp  crosswalk.hpp  layby.hpp  obstacle.hpp  parking.hpp
include/recognition/: crossroad.hpp  ring.cpp  ring.hpp  tracking.hpp
res/calibration/: calibration.xml
src/: icar.cpp  main.cpp
tests/: ai.cpp  hsv.cpp  ipm.cpp  keyboard.py  startup.py  track.cpp  uart.cpp
